Fixed project page-nav not showing all entries.

--- a/styles/partials/project.css
+++ b/styles/partials/project.css
@@ -121,14 +121,10 @@ header {
 	
 	&.active {
 		transition-timing-function: ease-in, ease, ease;
-		max-height: 3em;
+		max-height: 4.6em;
 		border-width: 1px;
 		border-color: #DEDEDE;
 		margin-top: 1rem;
-	}
-	
-	&.active.long {
-		max-height: 5em;
 	}
 
 	a {
